# EMC-Koen

./: CMakeLists.txt  README.md
examples/unitCube/: 10.fma  1000.fma  1part.fma  2center.fma  2particles.fma  500.fma
examples/unitCube/steadystates/: 1e16.fma  1e16_holes.fma  3e15_holes.fma
include/: EMCGenericWriter.hpp  acoustic.hpp  drift.hpp  free_flight_scatter.hpp  init_kspace.hpp  material_paramaters.hpp  output.hpp  polaroptical.hpp  random.hpp  resetParticleLocation.hpp  scat_table.hpp  scatter.hpp  treeStructure.hpp
include/scalfmm/include/: InastempCompileConfig.h  ScalFmmConfig.h
include/scalfmm/include/Adaptive/: FAdaptChebKernel.hpp
include/scalfmm/include/Core/: FCoreCommon.hpp
include/scalfmm/include/Files/: FFmaGenericLoader.hpp
include/scalfmm/include/Kernels/Chebyshev/: FAbstractChebKernel.hpp  FChebCell.hpp  FChebSymM2LHandler.hpp
include/scalfmm/include/Kernels/Interpolation/: FInterpMatrixKernel.hpp
include/scalfmm/include/Kernels/P2P/: FP2P.hpp  FP2PParticleContainer.hpp
include/scalfmm/include/Utils/: FAca.hpp  FAlgorithmTimers.hpp  FBlas.hpp  FComplex.hpp  FPoint.hpp
include/scalfmm/lib/cmake/scalfmm/: scalfmm-targets.cmake  scalfmmConfig.cmake
scripts/: full_script.sh
src/: EnsembleMC.cpp
